--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -5,7 +5,7 @@ praw==3.2.1
 python-dateutil==2.4.2
 pytz==2015.4
 requests==2.7.0
-rethinkdb==2.1.0-1
+rethinkdb==2.1.0
 retrying==1.3.3
 six==1.9.0
 update-checker==0.11
